# humanint

./: LICENSE.txt  README.md  __init__.py  _extras.py  from_human.py  longint.py  pyproject.toml  setup.py  shortint.py  to_human.py
