[project]
name = "shortint"
description = "Shorten numbers to abbreviate them, also with an option to reverse that process."
readme = {file = "README.md", content-type = "text/markdown"}
version = "0.0.1"
keywords = ["shortint", "longint", "shorten numbers", "abbreviate numbers"]
requires-python = ">= 3.12"
authors = [
    {name = "Axololly", email = "james@griggs.co.uk"}
]
maintainers = [
    {name = "Axololly", email = "james@griggs.co.uk"}
]