[project]
name = "humanint"
description = "Turn numbers into a more readable format, and do the reverse."
readme = {file = "README.md", content-type = "text/markdown"}
version = "0.0.1"
keywords = ["human", "shorten numbers", "abbreviate numbers", "human-readable"]
requires-python = ">= 3.12"
authors = [
    {name = "Axololly", email = "james@griggs.co.uk"}
]
maintainers = [
    {name = "Axololly", email = "james@griggs.co.uk"}
]